--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -154,7 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
-    <Content Include="TextFile1.txt" />
+    <Content Include="заметки.txt" />
     <None Include="trash.png" />
   </ItemGroup>
   <ItemGroup>
