что то да сделал

--- a/Client/App.config
+++ b/Client/App.config
@@ -8,17 +8,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-    <userSettings>
-        <Client.Settings>
-            <setting name="startCount" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="isLogin" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="userId" serializeAs="String">
-                <value>0</value>
-            </setting>
-        </Client.Settings>
-    </userSettings>
+    <appSettings>
+        <add key="startCount" value="0"/>
+        <add key ="userId" value="null"/>
+        <add key ="isLogin" value="false"/>
+    </appSettings>
 </configuration>
