--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\User.cs" />
     <Compile Include="Views\Bascket.cs">
       <SubType>Form</SubType>
     </Compile>
